--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Peripheral access crate for TI MSP430FR2433 microcontroller"
 keywords = ["no-std", "msp430", "svd2rust", "embedded", "ti"]
 repository = "https://github.com/pmnxis/msp430fr2433"
 license = "MIT OR Apache-2.0"
+documentation = "https://docs.rs/msp430fr2433"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
