Update some package metadata for docs.rs
Even update additional metadata such as "targets" and "cargo-args".
cargo does not generate doc well.
It depend issue `https://github.com/rust-lang/docs.rs/issues/1683`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ version = "0.3.1"
 
 [features]
 rt = ["msp430-rt/device"]
+
+[package.metadata.docs.rs]
+features = ["device"]
+targets = ["msp430-none-elf"]
+cargo-args = ["-Z", "build-std=core"]
